Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.8.0
-
Fix Version/s: Qt Creator 4.9.0-beta1
-
Component/s: Analyzer: Clang Tidy & Clazy
-
Labels:
-
Environment:Windows 10
-
Platform/s:
-
Commits:2e58938404c7c54c741d976816d304cc8447cc56 (qt-creator/qt-creator/4.9)
Description
When using a UNC path inside INCLUDEPATH then it will assume it to be a relative one when passed to clang for analyzing.
Attachments
Issue Links
- relates to
-
QTBUG-63970 QFileInfo::canonicalPath() does not works right on WIndows symlinks to UNC paths
-
- Closed
-